--- a/consult-front/src/main/resources/static/assets/css/mycss.css
+++ b/consult-front/src/main/resources/static/assets/css/mycss.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
 }
 
+div{
+    display: block;
+}
+
 .logo{
 
     flex: none;
@@ -62,7 +66,11 @@ body {
     cursor: pointer;
 }
 
-.header-wrapper .header .add-hover-line:after {
+.header-wrapper .add-hover-line{
+    position: relative;
+}
+
+.header-wrapper .add-hover-line:hover::after {
     content: "";
     position: absolute;
     left: 0;
@@ -70,6 +78,9 @@ body {
     width: 100%;
     height: 2px;
     background: #f85f48;
-    opacity: 0;
+    opacity: 1;
     transition: opacity .3s;
 }
+
+
+
